--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "portfolio",
-  "module": "index.ts",
   "type": "module",
   "scripts": {
     "dev": "astro dev",
@@ -9,17 +8,25 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/sitemap": "^3.1.4",
     "@astrojs/tailwind": "^5.1.0",
+    "@builder.io/qwik": "^1.5.2",
+    "@playform/compress": "^0.0.3",
+    "@qwikdev/astro": "^0.5.14",
+    "@sentry/astro": "^7.111.0",
+    "@spotlightjs/astro": "^1.0.20",
     "astro": "^4.6.3",
+    "astro-robots-txt": "^1.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.1",
-    "@commitlint/types": "^19.0.3",
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
-    "lefthook": "^1.6.10"
+    "@commitlint/types": "^19.0.3",
+    "lefthook": "^1.6.10",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "trustedDependencies": ["@biomejs/biome", "esbuild", "lefthook", "sharp"]
 }
