--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
+    "preview": "astro preview",
     "postinstall": "lefthook install"
   },
   "dependencies": {
@@ -14,17 +15,15 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "astro-robots-txt": "^1.0.0",
     "@astrojs/check": "^0.5.10",
-    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/sitemap": "^3.1.4",
-    "@spotlightjs/astro": "^1.0.20",
-    "@sentry/astro": "^7.111.0",
-    "@playform/compress": "^0.0.3",
+    "@astrojs/tailwind": "^5.1.0",
     "@biomejs/biome": "1.7.1",
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
+    "@playform/compress": "^0.0.3",
+    "astro-robots-txt": "^1.0.0",
     "lefthook": "^1.6.10",
     "vite-tsconfig-paths": "^4.3.2"
   },
