--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
 
+  "[astro]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "quickfix.biome": "always",
