--- a/biome.json
+++ b/biome.json
@@ -25,6 +25,7 @@
       "trailingComma": "all"
     },
 
+    "globals": ["Astro"],
     "parser": {
       "unsafeParameterDecoratorsEnabled": true
     }
