--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@builder.io/qwik": "^1.5.2",
     "@qwikdev/astro": "^0.5.14",
     "astro": "^4.6.3",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
