--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
+    "tippy.js": "^6.3.7",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
