--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -2,7 +2,7 @@ pre-commit:
   commands:
     check:
       glob: "*.{js,ts,jsx,tsx,.d.ts,json,astro}"
-      run: bunx biome check --no-errors-on-unmatched --files-ignore-unknown=true {staged_files}
+      run: bunx eslint --fix
 
 commit-msg:
   commands:
