--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "postinstall": "lefthook install"
@@ -37,6 +36,7 @@
     "eslint-plugin-tailwindcss": "^3.15.1",
     "lefthook": "^1.6.10",
     "prettier-plugin-astro": "^0.13.0",
+    "typed-query-selector": "^2.11.2",
     "unplugin-icons": "^0.18.5",
     "vite-tsconfig-paths": "^4.3.2"
   },
