--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "jsxImportSource": "@builder.io/qwik",
     "baseUrl": ".",
     "paths": {
-      "@app/*": ["./source/*"],
-      "@common/*": ["./source/common/*"]
+      "@app/*": ["./source/*"]
     },
 
     "types": ["unplugin-icons/types/astro"],
