feat: i18n routing and translations

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@qwikdev/astro": "^0.5.14",
     "astro": "^4.6.3",
     "clsx": "^2.1.1",
+    "nanostores": "^0.10.3",
+    "object-path": "^0.11.8",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tippy.js": "^6.3.7",
@@ -29,6 +31,7 @@
     "@commitlint/types": "^19.0.3",
     "@iconify-json/lucide": "^1.1.184",
     "@playform/compress": "^0.0.3",
+    "@types/object-path": "^0.11.4",
     "astro-robots-txt": "^1.0.0",
     "eslint": "^9.0.0",
     "eslint-plugin-astro": "^0.34.0",
@@ -36,6 +39,7 @@
     "eslint-plugin-tailwindcss": "^3.15.1",
     "lefthook": "^1.6.10",
     "prettier-plugin-astro": "^0.13.0",
+    "type-fest": "^4.17.0",
     "typed-query-selector": "^2.11.2",
     "unplugin-icons": "^0.18.5",
     "vite-tsconfig-paths": "^4.3.2"
