--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-tailwindcss": "^3.15.1",
     "lefthook": "^1.6.10",
     "prettier-plugin-astro": "^0.13.0",
+    "tailwindcss-animate": "^1.0.7",
     "type-fest": "^4.17.0",
     "typed-query-selector": "^2.11.2",
     "unplugin-icons": "^0.18.5",
