fix: headline translation highlighting

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
-    "@iconify-json/devicon": "^1.1.40",
     "@iconify-json/lucide": "^1.1.184",
+    "@iconify-json/tabler": "^1.1.110",
     "@playform/compress": "^0.0.3",
     "@types/object-path": "^0.11.4",
     "astro-robots-txt": "^1.0.0",
