--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "postinstall": "lefthook install"
   },
   "dependencies": {
+    "@astrojs/react": "^3.3.1",
     "@builder.io/qwik": "^1.5.2",
     "@qwikdev/astro": "^0.5.14",
+    "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.2",
-    "@types/three": "^0.164.0",
     "astro": "4.7.0",
     "astro-icon": "^1.1.0",
     "clsx": "^2.1.1",
     "nanostores": "^0.10.3",
-    "object-path": "^0.11.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.3",
@@ -36,8 +38,9 @@
     "@commitlint/types": "^19.0.3",
     "@iconify-json/lucide": "^1.1.184",
     "@iconify-json/tabler": "^1.1.110",
-    "@playform/compress": "^0.0.3",
-    "@types/object-path": "^0.11.4",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.164.0",
     "astro-robots-txt": "^1.0.0",
     "eslint": "^9.0.0",
     "eslint-plugin-astro": "^0.34.0",
@@ -52,7 +55,6 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "trustedDependencies": [
-    "@biomejs/biome",
     "esbuild",
     "lefthook",
     "sharp"
