--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.3.1",
-    "@builder.io/qwik": "^1.5.2",
-    "@qwikdev/astro": "^0.5.14",
     "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.2",
     "astro": "4.7.0",
     "astro-icon": "^1.1.0",
     "clsx": "^2.1.1",
     "nanostores": "^0.10.3",
+    "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
@@ -38,6 +37,7 @@
     "@commitlint/types": "^19.0.3",
     "@iconify-json/lucide": "^1.1.184",
     "@iconify-json/tabler": "^1.1.110",
+    "@types/object-path": "^0.11.4",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.164.0",
