--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
     "**/.direnv": true,
-    "**/node_modules": false,
+    "**/node_modules": true,
     "**/.astro": true
   },
 
