--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "astro preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "fix": "eslint . --fix && prettier --write .",
     "postinstall": "lefthook install"
   },
   "dependencies": {
@@ -46,8 +49,8 @@
     "eslint": "^9.0.0",
     "eslint-plugin-astro": "^0.34.0",
     "eslint-plugin-format": "^0.1.1",
-    "eslint-plugin-tailwindcss": "^3.15.1",
     "lefthook": "^1.6.10",
+    "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "tailwindcss-animate": "^1.0.7",
     "type-fest": "^4.17.0",
