refactor: reduced print width and configured format check git hookç

--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -2,7 +2,7 @@ pre-commit:
   commands:
     check:
       glob: "*.{js,ts,jsx,tsx,.d.ts,json,astro}"
-      run: bunx eslint --fix
+      run: bunx eslint . && bunx prettier --check .
 
 commit-msg:
   commands:
