--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lefthook": "^1.6.10",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss-animate": "^1.0.7",
     "type-fest": "^4.17.0",
     "typed-query-selector": "^2.11.2",
