--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.3.1",
+    "@radix-ui/react-select": "^2.0.0",
     "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.2",
     "astro": "4.7.0",
     "astro-icon": "^1.1.0",
     "balance-text": "^3.3.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
     "nanostores": "^0.10.3",
     "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.3",
     "three": "^0.164.1",
     "tippy.js": "^6.3.7",
@@ -39,8 +40,10 @@
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
+    "@iconify-json/circle-flags": "^1.1.47",
     "@iconify-json/lucide": "^1.1.184",
     "@iconify-json/tabler": "^1.1.110",
+    "@savvywombat/tailwindcss-grid-areas": "^4.0.0",
     "@types/object-path": "^0.11.4",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
@@ -56,7 +59,6 @@
     "tailwindcss-animate": "^1.0.7",
     "type-fest": "^4.17.0",
     "typed-query-selector": "^2.11.2",
-    "unplugin-icons": "^0.18.5",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "trustedDependencies": [
