--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
-    "@iconify-json/circle-flags": "^1.1.47",
     "@iconify-json/lucide": "^1.1.184",
     "@iconify-json/tabler": "^1.1.110",
     "@savvywombat/tailwindcss-grid-areas": "^4.0.0",
@@ -57,6 +56,7 @@
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-debug-screens": "^2.2.1",
     "type-fest": "^4.17.0",
     "typed-query-selector": "^2.11.2",
     "vite-tsconfig-paths": "^4.3.2"
