--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.3.1",
-    "@radix-ui/react-select": "^2.0.0",
+    "@astrojs/svelte": "^5.4.0",
     "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.2",
     "astro": "4.7.0",
     "astro-icon": "^1.1.0",
     "balance-text": "^3.3.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.378.0",
     "nanostores": "^0.10.3",
     "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "svelte": "^4.2.16",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animated": "^1.0.1",
     "three": "^0.164.1",
     "tippy.js": "^6.3.7",
     "typescript": "^5.4.5"
@@ -51,9 +52,11 @@
     "eslint": "^9.0.0",
     "eslint-plugin-astro": "^0.34.0",
     "eslint-plugin-format": "^0.1.1",
+    "eslint-plugin-svelte": "^2.38.0",
     "lefthook": "^1.6.10",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-svelte": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-debug-screens": "^2.2.1",
