--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "postinstall": "lefthook install"
   },
   "dependencies": {
-    "@astrojs/react": "^3.3.1",
+    "@14islands/r3f-scroll-rig": "^8.13.1",
+    "@astrojs/react": "3.3.4",
     "@astrojs/svelte": "^5.4.0",
     "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.2",
-    "astro": "4.7.0",
+    "@uidotdev/usehooks": "^2.4.1",
+    "astro": "4.8.3",
     "astro-icon": "^1.1.0",
     "balance-text": "^3.3.1",
     "clsx": "^2.1.1",
@@ -25,6 +27,7 @@
     "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "suspend-react": "^0.1.3",
     "svelte": "^4.2.16",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
@@ -35,7 +38,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
-    "@astrojs/check": "^0.5.10",
+    "@astrojs/check": "0.6.0",
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/tailwind": "^5.1.0",
     "@commitlint/cli": "^19.2.2",
