--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-svelte": "^2.38.0",
     "lefthook": "^1.6.10",
+    "leva": "^0.9.35",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-svelte": "^3.2.3",
@@ -65,6 +66,7 @@
     "tailwindcss-debug-screens": "^2.2.1",
     "type-fest": "^4.17.0",
     "typed-query-selector": "^2.11.2",
+    "unplugin-icons": "^0.19.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "trustedDependencies": [
