--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "leva": "^0.9.35",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-glsl": "^0.2.0",
     "prettier-plugin-svelte": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss-animate": "^1.0.7",
@@ -67,6 +68,7 @@
     "type-fest": "^4.17.0",
     "typed-query-selector": "^2.11.2",
     "unplugin-icons": "^0.19.0",
+    "vite-plugin-glsl": "^1.3.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "trustedDependencies": [
