--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
 
     "paths": {
       "@root/*": ["./*"],
-      "@app/*": ["./source/*"]
+
+      "@app/*": ["./source/*"],
+      "$lib/*": ["./source/*"],
+      "@modules/*": ["./source/modules/*"]
     },
 
     "verbatimModuleSyntax": true
