--- a/package.json
+++ b/package.json
@@ -20,16 +20,22 @@
     "astro": "4.9.2",
     "astro-icon": "^1.1.0",
     "balance-text": "^3.3.1",
+    "bits-ui": "^0.21.10",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
+    "embla-carousel-svelte": "^8.1.3",
     "lenis": "^1.1.1",
+    "lucide-svelte": "^0.383.0",
     "nanostores": "^0.10.3",
     "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animated": "^1.0.1",
+    "tailwindcss-fluid-type": "^2.0.6",
     "three": "^0.164.1",
     "three-stdlib": "^2.30.2",
     "tippy.js": "^6.3.7"
@@ -45,6 +51,7 @@
     "@iconify-json/lucide": "^1.1.184",
     "@iconify-json/tabler": "^1.1.110",
     "@savvywombat/tailwindcss-grid-areas": "^4.0.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/object-path": "^0.11.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
