refactor: cleaning up code and testing responsiveness

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,9 @@
     "baseUrl": ".",
 
     "paths": {
-      "@root/*": ["./*"],
-
       "@app/*": ["./source/*"],
-      "$lib/*": ["./source/*"],
+      "@components/*": ["./source/components/*"],
+      "@lib/*": ["./source/lib/*"],
       "@modules/*": ["./source/modules/*"]
     },
 
