--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "bits-ui": "^0.21.10",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
+    "deepmerge-ts": "^7.0.3",
     "embla-carousel-svelte": "^8.1.3",
     "lenis": "^1.1.1",
     "lucide-svelte": "^0.383.0",
+    "map-obj": "^5.0.2",
     "nanostores": "^0.10.3",
     "object-path": "^0.11.8",
     "react": "^18.3.1",
@@ -69,6 +71,7 @@
     "prettier-plugin-svelte": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "r3f-perf": "^7.2.1",
+    "sharp": "^0.33.4",
     "svelte": "^4.2.16",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-debug-screens": "^2.2.1",
@@ -76,7 +79,6 @@
     "typed-query-selector": "^2.11.2",
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
-    "vite-plugin-glsl": "^1.3.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "trustedDependencies": [
