--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "fix": "eslint . --fix && prettier --write .",
-    "postinstall": "lefthook install"
+    "postinstall": "lefthook install",
+    "optimize:apng": "./scripts/optimize-apng.js"
   },
   "dependencies": {
     "@astrojs/react": "3.6.0",
@@ -25,6 +26,7 @@
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "deepmerge-ts": "^7.0.3",
+    "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-svelte": "^8.1.5",
     "lenis": "^1.1.3",
     "lucide-svelte": "^0.396.0",
@@ -33,6 +35,7 @@
     "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sharp-apng": "^0.1.5",
     "svelte-media-queries": "^1.6.2",
     "three": "^0.165.0",
     "three-stdlib": "^2.30.3",
