--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,7 @@
 
     "plugins": [{ "name": "@astrojs/ts-plugin" }],
     "verbatimModuleSyntax": true
-  }
+  },
+
+  "exclude": ["./functions/**/*"]
 }
