--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "fix": "eslint . --fix && prettier --write .",
     "postinstall": "lefthook install",
+    "pages:dev": "wrangler pages dev --local=false --compatibility-date 2024-05-24 --port 3000 build",
     "optimize:apng": "./scripts/optimize-apng.js"
   },
   "dependencies": {
     "@astrojs/react": "3.6.0",
     "@astrojs/svelte": "^5.6.0",
+    "@cloudflare/pages-plugin-turnstile": "^1.0.2",
+    "@hookform/resolvers": "^3.6.0",
+    "@marsidev/react-turnstile": "^0.7.1",
     "@nanostores/react": "^0.7.2",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.107",
     "@react-three/fiber": "^8.16.8",
     "astro": "4.11.0",
@@ -24,28 +28,33 @@
     "balance-text": "^3.3.1",
     "bits-ui": "^0.21.10",
     "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "deepmerge-ts": "^7.0.3",
-    "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-svelte": "^8.1.5",
     "lenis": "^1.1.3",
+    "lucide-react": "^0.397.0",
     "lucide-svelte": "^0.396.0",
     "map-obj": "^5.0.2",
     "nanostores": "^0.10.3",
     "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
+    "react-responsive": "^10.0.0",
     "sharp-apng": "^0.1.5",
     "svelte-media-queries": "^1.6.2",
     "three": "^0.165.0",
     "three-stdlib": "^2.30.3",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "valibot": "^0.35.0"
   },
   "devDependencies": {
     "@astrojs/check": "0.7.0",
     "@astrojs/sitemap": "3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/ts-plugin": "^1.8.0",
+    "@cloudflare/workers-types": "^4.20240620.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
