--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-responsive": "^10.0.0",
+    "resend": "^3.4.0",
     "sharp-apng": "^0.1.5",
     "svelte-media-queries": "^1.6.2",
     "three": "^0.165.0",
