feat: contact rate limiting and refactor of middlewares

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@app/*": ["../source/*"]
+      "@app/*": ["../source/*"],
+      "@api/*": ["./api/*"]
     },
 
     "types": ["@cloudflare/workers-types", "./types.d.ts"]
