feat: client translations plus i18n type fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     },
 
     "plugins": [{ "name": "@astrojs/ts-plugin" }],
+    "skipLibCheck": false,
     "verbatimModuleSyntax": true
   },
 
