--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.1.5",
+    "just-capitalize": "^3.2.0",
     "lenis": "^1.1.3",
     "lucide-react": "^0.397.0",
     "lucide-svelte": "^0.396.0",
