--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.1.5",
     "just-capitalize": "^3.2.0",
+    "ldrs": "^1.0.2",
     "lenis": "^1.1.3",
     "lucide-react": "^0.397.0",
     "lucide-svelte": "^0.396.0",
@@ -62,6 +63,7 @@
     "@iconify-json/lucide": "^1.1.194",
     "@iconify-json/tabler": "^1.1.114",
     "@savvywombat/tailwindcss-grid-areas": "^4.0.0",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/canvas-confetti": "^1.6.4",
     "@types/dom-view-transitions": "^1.0.4",
     "@types/object-path": "^0.11.4",
