--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.1.5",
     "just-capitalize": "^3.2.0",
+    "just-debounce-it": "^3.2.0",
     "ldrs": "^1.0.2",
     "lenis": "^1.1.3",
     "lucide-react": "^0.397.0",
@@ -48,7 +49,8 @@
     "three": "^0.165.0",
     "three-stdlib": "^2.30.3",
     "tippy.js": "^6.3.7",
-    "valibot": "^0.35.0"
+    "valibot": "^0.35.0",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@astrojs/check": "0.7.0",
@@ -99,7 +101,8 @@
   ],
   "pnpm": {
     "patchedDependencies": {
-      "astro-icon@1.1.0": "patches/astro-icon@1.1.0.patch"
+      "astro-icon@1.1.0": "patches/astro-icon@1.1.0.patch",
+      "vaul@0.9.1": "patches/vaul@0.9.1.patch"
     }
   }
 }
