--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
     "@iconify-json/lucide": "^1.1.194",
+    "@iconify-json/simple-icons": "^1.1.108",
     "@iconify-json/tabler": "^1.1.114",
     "@savvywombat/tailwindcss-grid-areas": "^4.0.0",
     "@types/canvas-confetti": "^1.6.4",
