--- a/package.json
+++ b/package.json
@@ -16,21 +16,15 @@
     "@cloudflare/pages-plugin-turnstile": "^1.0.2",
     "@hookform/resolvers": "^3.6.0",
     "@marsidev/react-turnstile": "^0.7.1",
-    "@nanostores/react": "^0.7.2",
-    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@types/aos": "^3.0.7",
-    "aos": "^2.3.4",
     "astro": "4.11.5",
     "astro-icon": "^1.1.0",
     "astro-seo": "^0.8.4",
     "balance-text": "^3.3.1",
     "bits-ui": "^0.21.10",
-    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "just-capitalize": "^3.2.0",
@@ -39,7 +33,6 @@
     "lenis": "^1.1.3",
     "lucide-react": "^0.397.0",
     "lucide-svelte": "^0.396.0",
-    "map-obj": "^5.0.2",
     "nanostores": "^0.10.3",
     "object-path": "^0.11.8",
     "react": "^18.3.1",
@@ -63,9 +56,8 @@
     "@iconify-json/lucide": "^1.1.194",
     "@iconify-json/simple-icons": "^1.1.108",
     "@iconify-json/tabler": "^1.1.114",
-    "@savvywombat/tailwindcss-grid-areas": "^4.0.0",
-    "@types/canvas-confetti": "^1.6.4",
     "@types/dom-view-transitions": "^1.0.4",
+    "@types/node": "^20.14.10",
     "@types/object-path": "^0.11.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
