refactor: change bunx alias to appropiate subcommand

--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -7,4 +7,4 @@
 commit-msg:
   commands:
     lint-commit:
-      run: bunx commitlint --edit ${LEFTHOOK_GIT_PARAMS}
+      run: bun x commitlint --edit
