--- a/package.json
+++ b/package.json
@@ -12,75 +12,75 @@
   },
   "dependencies": {
     "@astrojs/react": "3.6.0",
-    "@astrojs/svelte": "^5.6.0",
+    "@astrojs/svelte": "^5.7.3",
     "@cloudflare/pages-plugin-turnstile": "^1.0.2",
-    "@hookform/resolvers": "^3.6.0",
-    "@marsidev/react-turnstile": "^0.7.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@marsidev/react-turnstile": "^0.7.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tailwindcss/container-queries": "^0.1.1",
     "astro": "4.11.5",
-    "astro-icon": "^1.1.0",
+    "astro-icon": "^1.1.5",
     "astro-seo": "^0.8.4",
     "balance-text": "^3.3.1",
-    "bits-ui": "^0.21.10",
-    "class-variance-authority": "^0.7.0",
+    "bits-ui": "^0.21.16",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "just-capitalize": "^3.2.0",
     "just-debounce-it": "^3.2.0",
-    "ldrs": "^1.0.2",
-    "lenis": "^1.1.3",
+    "ldrs": "^1.1.9",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.397.0",
     "lucide-svelte": "^0.396.0",
     "nanostores": "^0.10.3",
     "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.0",
-    "resend": "^3.4.0",
+    "react-hook-form": "^7.71.1",
+    "resend": "^3.5.0",
     "tippy.js": "^6.3.7",
     "use-resize-observer": "^9.1.0",
     "valibot": "^1.2.0",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.9"
   },
   "devDependencies": {
     "@astrojs/check": "0.8.0",
     "@astrojs/sitemap": "3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/ts-plugin": "^1.9.0",
-    "@cloudflare/workers-types": "^4.20240620.0",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/types": "^19.0.3",
-    "@iconify-json/lucide": "^1.1.194",
-    "@iconify-json/simple-icons": "^1.1.108",
-    "@iconify-json/tabler": "^1.1.114",
-    "@types/dom-view-transitions": "^1.0.4",
-    "@types/node": "^20.14.10",
+    "@astrojs/tailwind": "^5.1.5",
+    "@astrojs/ts-plugin": "^1.10.6",
+    "@cloudflare/workers-types": "^4.20260118.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/types": "^19.8.1",
+    "@iconify-json/lucide": "^1.2.86",
+    "@iconify-json/simple-icons": "^1.2.66",
+    "@iconify-json/tabler": "^1.2.26",
+    "@types/dom-view-transitions": "^1.0.6",
+    "@types/node": "^20.19.30",
     "@types/object-path": "^0.11.4",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "astro-robots-txt": "^1.0.0",
-    "autoprefixer": "^10.4.19",
-    "cssnano": "^7.0.3",
-    "lefthook": "^1.6.18",
-    "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-svelte": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "sharp": "^0.33.4",
-    "svelte": "^4.2.18",
+    "autoprefixer": "^10.4.23",
+    "cssnano": "^7.1.2",
+    "lefthook": "^1.13.6",
+    "prettier": "^3.8.0",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-svelte": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "sharp": "^0.33.5",
+    "svelte": "^4.2.20",
     "tailwind-gradient-mask-image": "^1.2.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2",
     "tailwindcss-debug-screens": "^2.2.1",
-    "tailwindcss-fluid-type": "^2.0.6",
-    "type-fest": "^4.20.1",
-    "typed-query-selector": "^2.11.2",
+    "tailwindcss-fluid-type": "^2.0.7",
+    "type-fest": "^4.41.0",
+    "typed-query-selector": "^2.12.0",
     "typescript": "5.5.2",
     "vite-tsconfig-paths": "^4.3.2"
   },
@@ -91,7 +91,12 @@
   ],
   "pnpm": {
     "patchedDependencies": {
-      "vaul@0.9.1": "patches/vaul@0.9.1.patch"
-    }
+      "vaul": "patches/vaul.patch"
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "lefthook",
+      "sharp"
+    ]
   }
 }
